fix: add gap under header

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,3 +78,7 @@
    text-align:center;
     margin-top:10px;
   }
+
+  h1{
+      margin-bottom:20px;
+  }
